# llm-redactor

./: .gitignore  AGENT.md  CITATION.cff  FIRST_INSTRUCTION.md  Makefile  README.md  pyproject.toml
.agent/memory/: MEMORY.md  decisions.md  gotchas.md  next-steps.md  origin.md  user-profile.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  EVALUATION.md  OPTIONS.md  PAPER.md  THREAT_MODEL.md
evals/: __init__.py  cost_meter.py  generate.py  generate_figures.py  leak_meter.py  report.py  run_eval.py  run_semantic_leak.py  run_utility_eval.py  runner.py  schema.py  utility_meter.py
evals/generators/: corpus.py  wl1_pii.py  wl2_secrets.py  wl3_implicit.py  wl4_code.py
evals/workloads/wl1_pii/: annotations.jsonl
evals/workloads/wl2_secrets/: annotations.jsonl
evals/workloads/wl3_implicit/: annotations.jsonl
evals/workloads/wl4_code/: annotations.jsonl
examples/: anthropic.yaml  cloud-redact-rephrase.yaml  cloud-redact.yaml  local-only.yaml  max-privacy.yaml  mcp-with-cloud.yaml  operator-hardening.yaml  strict.yaml
hooks/: detect-sensitive.sh
paper/: bibliography.bib  paper.tex
scripts/: upload_hf_dataset.py
src/llm_redactor/: __init__.py  cli.py  config.py  observability.py
src/llm_redactor/detect/: __init__.py  llm_validator.py  ner.py  orchestrator.py  regex.py  types.py
src/llm_redactor/noise/: __init__.py  dp.py
src/llm_redactor/pipeline/: __init__.py  option_a.py  option_ab.py  option_b.py  option_c.py  option_d.py  option_e.py  option_f.py  option_g.py  option_h.py
src/llm_redactor/redact/: __init__.py  placeholder.py  restore.py
src/llm_redactor/rephrase/: __init__.py  local_model.py  validator.py
src/llm_redactor/transport/: __init__.py  cloud.py  fhe.py  http_proxy.py  mcp_server.py  mpc.py  split_inference.py  tee.py
tests/: conftest.py  test_config_merge.py  test_detect_regex.py  test_mcp_sessions.py  test_new_features.py  test_option_b_integration.py  test_options_defg.py  test_redact.py  test_rephrase.py
